allow rate tests to use aggs in aggregation module